# llm-modelbench

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  bootstrap.sh  install.sh  llmb  llmb-read-kv-env.sh  llmb-run  llmb-watch  pyproject.toml  requirements.txt  uninstall.sh  update.sh
docs/: BENCHMARK_LEVELS.md  CAMPAIGNS.md  CAPABILITY_ROUTING.md  CONTRIBUTING.md  FEATURES.md  JUDGE_DUMPS.md  PRIVACY_FIXTURES.md  PUBLISHING.md  RANKINGS.md  README.md  REPAIR.md  SAFETY.md  SCORING.md  TASKS.md  USAGE.md  auto_confirm_sudoers.md
examples/: config.example.json  config.example.yaml
llm_modelbench/: __init__.py  aggregate.py  campaign.py  capabilities.py  classify.py  cli.py  compare.py  config.py  context_profile.py  coverage.py  doctor.py  dossier.py  filters.py  fingerprint.py  freeze.py  gap_planner.py  grade.py  hardware.py  inline_ui.py  interactive_nav.py  judge.py  judge_dumps.py  media.py  model_cards.py  ollama.py  ollama_service.py  outcome.py  planner.py  progress.py  ranking_controls.py  rankings.py  rankings_template.html  rankings_v3.py  rankings_v31.py  reliability.py  repair.py  report.py  retrieval_diagnostics.py  runner.py  sandbox.py  (+11 more)
scripts/: llmb-git-sync.bat  llmb-git-sync.sh
tests/: test_agentic_calibration.py  test_agentic_finals_hardening.py  test_agentic_finals_seed.py  test_agentic_report_ranking.py  test_agentic_validity.py  test_agentic_validity_completion.py  test_campaign.py  test_campaign_adoption_transaction.py  test_campaign_cleanup_migration_hygiene.py  test_campaign_final_acceptance.py  test_filters.py  (+61 more)
(+29 files in other folders)
