[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-modelbench"
dynamic = ["version"]
description = "A comprehensive, hardware-adaptive benchmark suite for local Ollama models."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "chrsdme" }]
keywords = ["ollama", "llm", "benchmark", "local-ai", "evaluation"]
dependencies = []   # core runs on the standard library only

[project.optional-dependencies]
vision = ["pillow>=10.0"]     # OCR image rendering
pdf = ["pypdf>=4.0"]          # real PDF text-extraction task
yaml = ["pyyaml>=6.0"]        # YAML config files (JSON works without this)
dev = ["pytest>=7.0"]
all = ["pillow>=10.0", "pypdf>=4.0", "pyyaml>=6.0", "pytest>=7.0"]

[project.scripts]
llm-modelbench = "llm_modelbench.cli:main"

[project.urls]
Homepage = "https://github.com/chrsdme/llm-modelbench"

[tool.setuptools]
packages = ["llm_modelbench", "llm_modelbench.finals", "llm_modelbench.fixtures", "llm_modelbench.fixtures.ocr"]

[tool.setuptools.dynamic]
version = {attr = "llm_modelbench.__version__"}

[tool.setuptools.package-data]
llm_modelbench = ["rankings_template.html"]
"llm_modelbench.fixtures.ocr" = ["*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
